.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:17:36 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/Agenda.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Agenda.d" -MT"src/Agenda.d" -o "src/Agenda.o" "../src/Agenda.cpp"
Finished building: ../src/Agenda.cpp
 
Building target: Agenda
Invoking: Cross G++ Linker
g++  -o "Agenda"  ./src/Agenda.o ./src/Contacto.o ./src/main.o   
Finished building target: Agenda
 
12:19:32 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/Agenda.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Agenda.d" -MT"src/Agenda.d" -o "src/Agenda.o" "../src/Agenda.cpp"
Finished building: ../src/Agenda.cpp
 
Building file: ../src/main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Agenda
Invoking: Cross G++ Linker
g++  -o "Agenda"  ./src/Agenda.o ./src/Contacto.o ./src/main.o   
Finished building target: Agenda
 
12:20:16 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/Agenda.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Agenda.d" -MT"src/Agenda.d" -o "src/Agenda.o" "../src/Agenda.cpp"
Finished building: ../src/Agenda.cpp
 
Building file: ../src/main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Agenda
Invoking: Cross G++ Linker
g++  -o "Agenda"  ./src/Agenda.o ./src/Contacto.o ./src/main.o   
Finished building target: Agenda
 
12:29:25 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/Agenda.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Agenda.d" -MT"src/Agenda.d" -o "src/Agenda.o" "../src/Agenda.cpp"
../src/Agenda.cpp: In member function ‘void Dentista::Agenda::insertarPaciente(const Dentista::Contacto&)’:
../src/Agenda.cpp:55:25: error: ‘setPacientes’ was not declared in this scope
  setPacientes(*pacientes);
                         ^
make: *** [src/Agenda.o] Error 1
12:30:36 **** Incremental Build of configuration Debug for project Agenda ****
make all 
Building file: ../src/Agenda.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Agenda.d" -MT"src/Agenda.d" -o "src/Agenda.o" "../src/Agenda.cpp"
Finished building: ../src/Agenda.cpp
 
Building file: ../src/main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: Agenda
Invoking: Cross G++ Linker
g++  -o "Agenda"  ./src/Agenda.o ./src/Contacto.o ./src/main.o   
Finished building target: Agenda
 
